feat: 增强日志记录功能，新增详细统计报告和消息类型

--- a/MD/日志记录改进报告.md
+++ b/MD/日志记录改进报告.md
@@ -1,20 +1,101 @@
 <!-- @format -->
 
-# 日志记录改进报告
+# 日志记录与统计报告改进
 
 ## 修改概述
 
-为了更好地记录程序运行过程中的各种信息，对图片工具的日志记录功能进行了以下改进：
+为了更好地记录程序运行过程中的各种信息，并在处理结束时提供详细的统计报告，对图片工具的日志记录功能进行了全面改进。
 
-## 修改内容
+## 新增功能
 
-### 1. 增强的消息类型
+### 1. 详细统计报告
+
+在每次处理完成后，程序会在日志末尾生成包含以下信息的详细统计报告：
+
+#### 基础信息
+- **执行时间**: 精确到秒的处理时长
+- **执行模式**: 区分预览模式和正式处理模式
+
+#### 文件统计
+- **输入文件总数**: 扫描到的图片文件数量
+- **输出文件总数**: 最终生成的文件数量
+- **跳过文件数**: 因各种原因跳过处理的文件数量
+- **错误文件数**: 处理失败的文件数量
+
+#### 操作统计
+- **格式转换**: 成功转换格式的文件数量
+- **文件重命名**: 成功重命名的文件数量
+- **文件分类**: 成功分类的文件数量
+- **去重处理**: 详细的保留和删除统计
+
+#### 文件格式分布
+- 按文件扩展名统计的文件数量分布
+- 支持所有处理的图片格式（JPG、PNG、WebP、GIF等）
+
+#### 文件大小统计
+- **处理前总大小**: 输入文件的总大小（MB）
+- **处理后总大小**: 输出文件的总大小（MB）
+- **大小变化**: 绝对变化量和百分比变化
+
+#### 问题统计
+- **警告数量**: 处理过程中产生的警告总数
+- **错误数量**: 处理过程中产生的错误总数
+
+#### 操作列表
+- 列出本次处理中启用的所有功能模块
+
+### 2. 增强的消息类型
 
 添加了新的消息类型来记录更多信息：
 
 -   **INFO**: 一般信息消息（如文件统计信息）
 -   **WARNING**: 警告消息（如 PIL 库的警告）
+-   **STATS**: 统计报告消息（处理结束时的详细统计）
 -   **ERROR**: 错误消息（保持原有功能）
+
+### 3. 统计报告示例
+
+```
+============================================================
+处理统计报告
+============================================================
+执行时间: 15.32 秒
+执行模式: 正式处理
+
+文件统计:
+  输入文件总数: 382
+  输出文件总数: 365
+  跳过文件数: 2
+  错误文件数: 15
+
+操作统计:
+  格式转换: 350 个文件
+  文件重命名: 365 个文件
+  去重处理:
+    保留文件: 365 个
+    删除重复: 17 个
+
+文件格式分布:
+  .JPG: 250 个文件
+  .PNG: 85 个文件
+  .WEBP: 30 个文件
+  .GIF: 17 个文件
+
+文件大小统计:
+  处理前总大小: 458.32 MB
+  处理后总大小: 312.45 MB
+  大小变化: -145.87 MB (-31.8%)
+
+问题统计:
+  警告数量: 8
+  错误数量: 15
+
+执行的操作:
+  ✓ 格式转换
+  ✓ 重复图片检测
+  ✓ 文件重命名
+============================================================
+```
 
 ### 2. 具体改进项目
 
@@ -81,6 +162,71 @@ elif m.startswith('WARNING '):
     print(f"[WARNING] {warning_msg}")  # 确保控制台也有记录
 ```
 
+#### 3.4 统计追踪器
+
+新增了统计信息追踪器，在应用初始化时创建：
+
+```python
+# 统计信息追踪器
+self.stats = {
+    'start_time': None,
+    'end_time': None,
+    'total_files': 0,
+    'input_files': 0,
+    'output_files': 0,
+    'skipped_files': 0,
+    'error_files': 0,
+    'converted_files': 0,
+    'renamed_files': 0,
+    'dedupe_removed': 0,
+    'dedupe_kept': 0,
+    'classified_files': 0,
+    'warnings_count': 0,
+    'errors_count': 0,
+    'file_formats': {},  # 格式分布统计
+    'operations': [],  # 执行的操作列表
+    'total_size_before': 0,
+    'total_size_after': 0,
+}
+```
+
+#### 3.5 统计报告生成
+
+新增 `_generate_stats_report` 方法，在处理完成时生成详细统计报告：
+
+```python
+def _generate_stats_report(self):
+    """生成并记录详细的统计报告"""
+    if not self.stats['start_time'] or not self.stats['end_time']:
+        return
+    
+    duration = self.stats['end_time'] - self.stats['start_time']
+    
+    # 构建详细的统计报告
+    report_lines = [
+        "",
+        "=" * 60,
+        "处理统计报告",
+        "=" * 60,
+        f"执行时间: {duration:.2f} 秒",
+        f"执行模式: {'正式处理' if self.write_to_output else '预览模式'}",
+        # ... 更多统计信息
+    ]
+    
+    # 记录到日志文件
+    for line in report_lines:
+        self.q.put(f'STATS {line}')
+```
+
+#### 3.6 自动统计收集
+
+在各个处理阶段自动收集统计信息：
+
+- 文件扫描时收集文件格式分布和大小统计
+- 日志处理时从操作日志中提取统计信息
+- 警告和错误处理时更新相应计数器
+- 处理完成时计算输出文件统计
+
 ## 效果预期
 
 实施这些改进后，日志文件（`program.log`）将包含：
@@ -88,7 +234,20 @@ elif m.startswith('WARNING '):
 1. **完整的文件扫描信息** - 包括图片文件数量、非图片文件列表等
 2. **处理阶段的详细信息** - 如跳过的文件数量、转换统计等
 3. **第三方库的警告信息** - 如 PIL 的 EXIF 数据警告、图片损坏警告等
-4. **时间戳标记** - 每条日志都带有准确的时间戳
+4. **详细的统计报告** - 包括执行时间、文件统计、操作统计、大小变化等
+5. **时间戳标记** - 每条日志都带有准确的时间戳
+
+### 统计报告功能
+
+每次处理完成后，日志文件末尾会自动生成包含以下内容的统计报告：
+
+- **时间统计**: 精确的执行时间和处理模式
+- **文件统计**: 输入、输出、跳过、错误文件的完整统计
+- **操作统计**: 各种处理操作的成功次数统计
+- **格式分布**: 按文件格式的数量分布
+- **大小变化**: 处理前后的文件大小对比和变化率
+- **问题统计**: 警告和错误的总数统计
+- **操作清单**: 本次处理启用的功能模块列表
 
 ## 使用方法
 
